[package]
name = "slmlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
crc32fast = "1.3.2"
env_logger = "0.10.0"
glob = "0.3.0"
log = "0.4.17"
thiserror = "1.0.37"
zstd = "0.12.1"


[dev-dependencies]
env_logger = "0.10.0"
tempdir = "0.3.7"
